turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '(' expected but identifier found.
  letsDoThis()
  ^LangtonsAnt:3: error: illegal start of simple expression
}
^